# cc_tools

./: .gitignore  CMakeLists.txt
app/cc_view/: CMakeLists.txt  resources.qrc
app/cc_view/qml/: CC_AddNewSendMessageDialog.qml  CC_MessagesToSend.qml  CC_MessagesToSendToolbar.qml  CC_PluginsConfigToolbar.qml  CC_ToolButton.qml  CC_Toolbar.qml
app/cc_view/qml/basic/: CC_BasicFieldFrame.qml  CC_BasicFieldNameLabel.qml  CC_BasicFieldSerValue.qml  CC_BasicHorSplitter.qml  CC_BasicSerValueTextField.qml  CC_BasicToolButton.qml  CC_BasicTooltip.qml
app/cc_view/qml/elem/: CC_ElemAvailableMessageTypesList.qml  CC_ElemMessageDetails.qml  CC_ElemMessageFieldsList.qml  CC_ElemSearchMessagesStringInput.qml  CC_ElemSearchStringInput.qml  CC_ElemStringInput.qml
app/cc_view/qml/elem/field/: CC_ElemFieldBitfield.qml  CC_ElemFieldBundle.qml  CC_ElemFieldData.qml  CC_ElemFieldEnum.qml  CC_ElemFieldFloat.qml  CC_ElemFieldInt.qml  CC_ElemFieldList.qml  CC_ElemFieldOptional.qml  CC_ElemFieldSet.qml  CC_ElemFieldString.qml  CC_ElemFieldVariant.qml
app/cc_view/script/: cc_view.sh
app/cc_view/src/: AppMgr.cpp  AppMgr.h  AvailableMessagesListModel.cpp  GuiState.cpp  GuiState.h  MessageCreator.cpp  MessageCreator.h  QmlMessage.cpp  QmlMessage.h  main.cpp
app/cc_view/src/model/: AvailableMessagesListModel.h  EnumValuesModel.cpp  EnumValuesModel.h  MessageFieldsListModel.cpp  MessageFieldsListModel.h  SetBitsModel.cpp  SetBitsModel.h
app/cc_view/src/qml/: QmlEnumField.cpp  QmlEnumField.h  QmlField.cpp  QmlField.h  QmlMessage.cpp  QmlSetField.cpp  QmlSetField.h
lib/cc_app/: CMakeLists.txt
lib/cc_app/include/cc_tools/cc_app/: MsgMgr.h
lib/cc_app/src/: MsgMgr.cpp  MsgMgrImpl.cpp  MsgMgrImpl.h
lib/cc_plugin/: CMakeLists.txt
lib/cc_plugin/include/cc_tools/cc_plugin/: Field.h  Filter.h  Message.h  Protocol.h
lib/cc_plugin/src/: Field.cpp  Filter.cpp  Message.cpp  Protocol.cpp
plugin/protocol/demo/: CMakeLists.txt  DemoFrame.h  DemoMessage.h  DemoProtocol.cpp  DemoProtocol.h
plugin/protocol/demo/include/demo/: Message.h  MsgId.h  Version.h
plugin/protocol/demo/include/demo/dispatch/: DispatchClientInputMessage.h  DispatchMessage.h  DispatchServerInputMessage.h
plugin/protocol/demo/include/demo/field/: FieldBase.h  Lat.h  LatCommon.h  Lon.h  LonCommon.h  MsgId.h  MsgIdCommon.h  PropRemLen.h  PropRemLenCommon.h
plugin/protocol/demo/include/demo/frame/: Frame.h  FrameCommon.h
plugin/protocol/demo/include/demo/input/: AllMessages.h  ClientInputMessages.h  ServerInputMessages.h
plugin/protocol/demo/include/demo/message/: Ack.h  AckCommon.h  Bitfields.h  BitfieldsCommon.h  Datas.h  DatasCommon.h  Enums.h  EnumsCommon.h  Floats.h  FloatsCommon.h  Lists.h  ListsCommon.h  Optionals.h  OptionalsCommon.h  ScaledInts.h  ScaledIntsCommon.h  Sets.h  SetsCommon.h  SimpleInts.h  SimpleIntsCommon.h  Strings.h  StringsCommon.h  Variants.h  VariantsCommon.h
plugin/protocol/demo/include/demo/options/: BareMetalDefaultOptions.h  ClientDefaultOptions.h  DataViewDefaultOptions.h  DefaultOptions.h  ServerDefaultOptions.h
(+17 files in other folders)
